Persistencia dos dados no banco

--- a/CRUD_APP/Views/Products/Index.cshtml
+++ b/CRUD_APP/Views/Products/Index.cshtml
@@ -34,7 +34,7 @@
                 <td>@product.Nome</td>
                 <td>@product.Marca</td>
                 <td>@product.Categoria</td>
-                <td>R$ (@product.Preco)</td>
+                <td>R$ @product.Preco</td>
                 <td><img src="/products/@product.ImageFileNome" width="100" /></td>
                 <td>@product.DataCriacao.ToString("MM/dd/yyyy")</td>
                 <td style="white-space:nowrap">
