--- a/CRUD_APP/Views/Products/Create.cshtml
+++ b/CRUD_APP/Views/Products/Create.cshtml
@@ -39,7 +39,7 @@
             <div class="row mb-3">
                 <label class="col-sm-4 col-form-label">Preço</label>
                 <div class="col-sm-8">
-                    <input class="form-control" asp-for="Preco" />
+                    <input class="form-control" asp-for="Preco">
                     <span asp-validation-for="Preco" class="text-danger"></span>
                 </div>
             </div>
@@ -47,7 +47,7 @@
             <div class="row mb-3">
                 <label class="col-sm-4 col-form-label">Descrição</label>
                 <div class="col-sm-8">
-                    <input class="form-control" asp-for="Descricao" />
+                    <textarea class="form-control" asp-for="Descricao"></textarea>
                     <span asp-validation-for="Descricao" class="text-danger"></span>
                 </div>
             </div>
@@ -55,8 +55,18 @@
             <div class="row mb-3">
                 <label class="col-sm-4 col-form-label">Imagem</label>
                 <div class="col-sm-8">
-                    <input class="form-control" asp-for="ImageFile" />
+                    <input class="form-control" asp-for="ImageFile">
                     <span asp-validation-for="ImageFile" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="offset-sm-4 col-sm-4 d-grid">
+                    <button type="submit" class="btn btn-primary">Salvar</button>
+                </div>
+
+                <div class="col-sm-4 d-grid">
+                    <a class="btn btn-outline-primary" asp-controller="Products" asp-action="Index" role="button">Cancelar</a>
                 </div>
             </div>
 
