Ajustes_tela_home

--- a/CRUD_APP/Views/Home/Index.cshtml
+++ b/CRUD_APP/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Bem vindo!";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem vindo!</h1>
+    <p>Clique no link abaixo ou na aba "Produtos" no menu de navegação para acessar a lista de produtos.</p>
+    <button class="botao"><a class="nav-link" asp-area="" asp-controller="Products" asp-action="Index">Produtos</a></button>
 </div>
