--- a/CRUD_APP/wwwroot/css/site.css
+++ b/CRUD_APP/wwwroot/css/site.css
@@ -18,5 +18,35 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+
 }
+
+.botao {
+
+
+    background-color: #007bff; 
+    border: none; 
+    color: white; 
+    padding: 10px 20px; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
+    font-size: 16px; 
+    margin: 4px 2px; 
+    cursor: pointer; 
+    border-radius: 4px; 
+    transition: background-color 0.3s ease; 
+}
+    .botao:hover  {
+        color: white;
+        background-color: #0056b3;
+    }
+    .botao a {
+        color: white;
+    }
+
+    .botao a:hover{
+        color: white;
+    }
+
